# polli.live

./: Caddyfile  Cargo.toml  README.md
.github/workflows/: build_and_deploy.yml  rust.yml
src/: access_token.rs  cleanup.rs  errors.rs  main.rs  routes.rs  session_id.rs  settings.rs  start_server.rs  state.rs  static_files.rs  tests.rs  user_id.rs
src/routes/: get_index.rs  get_page.rs  get_responses.rs  get_wait_for_page.rs  post_init_session.rs  post_page.rs  post_respond.rs  set_page.rs
static/: empty_session_page.html  index.html  initial_session_page.html  polli_live_injection.html
