[package]
name = "polli-live"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
clap = { version = "4.5.16", features = ["derive"] }
derive_more = { version = "1.0.0", features = ["full"] }
serde = { version = "1.0.209", features = ["serde_derive"] }
chrono = "0.4.38"
tokio = { version = "1.39.3", features = ["full"] }
actix-files = "0.6.6"
include_dir = "0.7.4"
actix-web-httpauth = "0.8.2"
