[package]
name = "polli-live"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"

[dependencies]
actix-web = "4"
actix-cors = "0.7.0"
clap = { version = "4.5.16", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.209", features = ["serde_derive"] }
chrono = "0.4.38"
tokio = { version = "1.44.1", features = ["full"] }
actix-files = "0.6.6"
include_dir = "0.7.4"
actix-web-httpauth = "0.8.2"
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.127"
byte-unit = "5.1.4"
rand = "0.9.0"
parking_lot = "0.12.3"
getrandom = "0.3.2"
hex = "0.4.3"
anyhow = "1.0.97"
